An attempt to include custom HTML code on readthedocs.org by overriding page.html instead of layout.html

--- a/source/_templates/page.html
+++ b/source/_templates/page.html
@@ -3,7 +3,7 @@
 #}
 {%- set docstitle = "Plone Developer Documentation" %}
 
-{% extends "!layout.html" %}
+{% extends "!page.html" %}
 
 {% block extrahead %}
 <script type="text/javascript">
