--- a/source/_templates/page.html
+++ b/source/_templates/page.html
@@ -38,7 +38,7 @@
 
     <p>
         If you arrived at this page by a web search we recommend to also see the
-        <a href="http://collective-docs.readthedocs.org">Plone Developer Documentation front page</a> .
+        <a href="http://developer.plone.org">Plone Developer Documentation front page</a> .
     </p>
 
 </div>
@@ -102,7 +102,7 @@
 
       <p>
         For basic information about updating this manual
-        and Sphinx format please see <a href="http://collective-docs.readthedocs.org/en/latest/writing/writing.html">
+        and Sphinx format please see <a href="http://developer.plone.org/reference_manuals/active/writing/writing.html">
         Writing and updating the manual</a> guide.
       </p>
 
