Fix various typos

--- a/source/_templates/page.html
+++ b/source/_templates/page.html
@@ -30,7 +30,7 @@
     </div>
 
     <p>
-        This section of <b><a href="http://plone.org">Plone content management system</a></b> Developer Documentation is no longer under active maintance.
+        This section of <b><a href="http://plone.org">Plone content management system</a></b> Developer Documentation is no longer under active maintenance.
         The section is included as the reference for older technologies (Plone 2.x, Plone 3.x).
         Some of the practices described in this documents may still work, but are not recommended
         to be used in your active Plone development. Use at your own risk.
